RESOLVED FIXED133593
REGRESSION (iOS WebKit2): backspace key does not repeat beyond a single word
https://bugs.webkit.org/show_bug.cgi?id=133593
Summary REGRESSION (iOS WebKit2): backspace key does not repeat beyond a single word
Enrica Casucci
Reported 2014-06-06 17:18:59 PDT
Autorepeat for delete key does not behave like it does on WebKit1. <rdar://problem/16352228>
Attachments
Patch (6.43 KB, patch)
2014-06-06 17:22 PDT, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-06-06 17:22:11 PDT
Enrica Casucci
Comment 2 2014-06-06 17:31:06 PDT
Committed revision 169669.
Note You need to log in before you can comment on or make changes to this bug.