REGRESSION (iOS WebKit2): backspace key does not repeat beyond a single word. https://bugs.webkit.org/show_bug.cgi?id=133593 <rdar://problem/16352228>

Reviewed by Benjamin Poulain.

We need to provide a way for the keyboard layer to select from
the current position to the beginning of the word moving backwards
and implement the method to know when we have reached the beginning of the document.

* UIProcess/WebPageProxy.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView selectWordBackward]):
(-[WKContentView _selectionAtDocumentStart]):
* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::selectWordBackward):
* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/WebPage.messages.in:
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::selectWordBackward):



Canonical link: https://commits.webkit.org/151586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169669 268f45cc-cd09-0410-ab3c-d52691b4dbfc